wp-content/themes/test36/less/styles.less
/* ... */
.transition(@property, @duration, @ease: ease, @delay: 0) {
	-webkit-transition-property: @property;  
	-webkit-transition-duration: @duration;
	-webkit-transition-timing-function: @ease;
	-webkit-transition-delay: @delay; 
	
	-moz-transition-property: @property;  
	-moz-transition-duration: @duration;
	-moz-transition-timing-function: @ease;
	-moz-transition-delay: @delay;
	
	-ms-transition-property: @property;  
	-ms-transition-duration: @duration;
	-ms-transition-timing-function: @ease;
	-ms-transition-delay: @delay;
	
	-o-transition-property: @property;  
	-o-transition-duration: @duration;
	-o-transition-timing-function: @ease;
	-o-transition-delay: @delay; 
	
	transition-property: @property;  
	transition-duration: @duration;
	transition-timing-function: @ease;
	transition-delay: @delay;
}

/* HTML TAG STYLES */
html {
	font-size: 100%; /* go with the default, 16px */
	height: 100%;
}
body {
	background: @white; /* Old browsers */
	background: -moz-linear-gradient(left, @barely 0%, @barely 50%, @white 50%, @white 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, right top, color-stop(0%,@barely), color-stop(50%,@barely), color-stop(50%,@white), color-stop(100%,@white)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(left, @barely 0%,@barely 50%,@white 50%,@white 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(left, @barely 0%,@barely 50%,@white 50%,@white 100%); /* Opera 11.10+ */
	background: -ms-linear-gradient(left, @barely 0%,@barely 50%,@white 50%,@white 100%); /* IE10+ */
	background: linear-gradient(to right, @barely 0%,@barely 50%,@white 50%,@white 100%); /* W3C */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='@barely', endColorstr='@white',GradientType=1 ); /* IE6-9 */

	color: @dark;
	font-family: Arial, Helvetica sans-serif;
	font-size: 16px; /* pixels fallback for no-rem browsers */
	font-size: 1rem; /* always in relation to html, so 16/16 */
    -webkit-font-smoothing: antialiased;
	line-height: 1;
	height: 100%;
	margin: 0;
	padding: 0;
	&.locked {
		position: fixed;
		overflow: hidden;
		width: 100%;
	}
}

a {
	.transition(color, 0.5s);
	color: @dark;
	text-decoration: none;
	&:hover,
	&:focus {
		color: @light;
		outline: none;
	}
	&.faded {
		&:hover,
		&:focus {
			color: @dark;
		}
	}
}

hr {
	.clear;
	.transition(height, 0.5s);
	height: 9px;
	background: #333;
	border: none;
	margin: 0;
}
h1,
h2,
h3,
h4,
h5,
h6,
ul,
li {
	margin: 0px;
	padding: 0px;
}
label {
	display: block;
}


/* UNIVERSAL STYLES */
.left {
	float: left;
}
.right {
	float: right;
}
.clear {
	clear: both;
}

.light {
	color: @light;
}
.medium {
	color: @medium;
}
.grey {
	color: @grey;
}
.dark {
	color: @dark;
}

.faded {
	.light;
	font-size: 18px;
	font-size: 1.125rem;
	&:before {
		content: '\a';
		white-space: pre;
	}
}
.endash {
	font-weight: bold;
}

.bg:hover {
	&.bg-blue {
		background: #8dd7f2;
	}
	&.bg-yellow {
		background: #f9d900;
	}
	&.bg-wood {
		background: url('img/bgs.jpg') no-repeat;
	}
	&.bg-saw {
		background: url('img/bgs.jpg') no-repeat 0 -103px;
	}
}


/* TYPOGRAPHY */
h1,
h2,
h3,
h4,
h5,
h6 {
	text-transform: uppercase;
}

.tiny,
.small,
small,
.normal,
big,
.big,
.large,
.huge {
	font-weight: bold;
}

h6,
.tiny {
	font-size: 13px;
	font-size: 0.8125rem;
}
h5,
.small,
small {
	font-size: 14px;
	font-size: 0.875rem;
}
h4,
.normal {
	font-size: 16px;
	font-size: 1rem;
}
h3,
big,
.big {
	font-size: 18px;
	font-size: 1.125rem;
}
h2,
.large {
	font-size: 20px;
	font-size: 1.25rem;
}
h1,
.huge {
	font-size: 30px;
	font-size: 1.875rem;
	line-height: 0.933;
}

.text,
.footer,
.blog-excerpt {
	font-size: 18px;
	font-size: 1.125rem;
	line-height: 1.555; /* 28 / 18 */
	.ndash {
		font-size: 25px;
		font-size: 1.5625rem;
	}
}
.block__info {
	font-size: 11px;
	font-size: 0.6875rem;
	line-height: 1.54; /* 17 / 11 */
	margin-top: -5px;
	h5 {
		line-height: 1.21; /* 17 / 14 */
	}
}


/* BOX MODEL */
#wrap {
	.transition(opacity, 0.5s, ease, 0.2s);
    opacity: 0;
    overflow: hidden;
    visibility: hidden;
	&.visible {
		opacity: 1;
		visibility: visible;
	}
}
.wrap {
	width: 91.41%; /* 1170 / 1280 */
	margin: 0 auto;
}

.logo__triangle {
	width: 0; 
	height: 0;
	border-left: 20px solid transparent;
	border-right: 20px solid transparent;
	border-bottom: 29px solid @dark;
	left: 50%;
	margin-left: -20px;
	position: fixed;
	-moz-transform: scale(.9999); /* smooths the triangle's edges in Firefox */
}
.clip-svg {
	height: 0;
	width: 0;
}
.logo__clip {
	top: 19px;
	z-index: 2;
	width: 40px;
	height: 29px;
	left: 50%;
	margin-left: -20px;
	position: fixed;
	-webkit-clip-path: url("#clip-shape");
	-webkit-clip-path: polygon(0% 87%, 50% 0%, 50% 0%, 100% 87%); /* works better for webkit */
	clip-path: polygon(0% 87%, 50% 0%, 50% 0%, 100% 87%);
	clip-path: url("#clip-shape"); /* only way to do it in Firefox */
	.logo__dark {
		background: @dark;
		width: 100%;
		height: 100%;
	}
}

.logo__box,
.logo__mobile {
	background: @dark;
	left: 50%;
	position: absolute;
	top: 0;
	z-index: 3;
}
.logo__box {
	clip: rect(auto, auto, auto, auto);
	height: 103px;
	margin-left: -52.5px;
	overflow: hidden;
	width: 103px;
	.logo__triangle-white {
		border-bottom-color: @white;
		position: absolute;
		top: 35px;
		z-index: 5;
		-webkit-backface-visibility: hidden;
		-moz-backface-visibility: hidden;
		backface-visibility: hidden;
		&.stick {
			margin-left: -21px; /* math doesn't seem right, but there was a visual wobble while switching from absolute to fixed */
			position: fixed;
			top: 19px;
		}
	}
}
.logo__mobile {
	display: none;
	height: 63px;
	width: 63px;
	margin-left: -31.5px;
	.logo__triangle-white {
		border-left: 13px solid transparent;
		border-right: 13px solid transparent;
		border-bottom: 18px solid @white;
		position: absolute;
		margin-left: -13px;
		top: 21px;
	}
	&.open {
		.logo__triangle-white {
			position: fixed;
			z-index: 101;
		}
	}
}
/* ... */

